# StarMapRecognition

./: CMakeLists.txt  README.md
data/: star_table.xml  xingtu01.xml  xingtu02.xml  xingtu03.xml  xingtu04.xml  xingtu05.xml  xingtu06.xml  xingtu07.xml  xingtu08.xml
src/: CMakeLists.txt  CameraManipulator.cpp  CameraManipulator.h  CommonFunc.cpp  CommonFunc.h  Descriptor.cpp  Descriptor.h  MasterCameraManipulator.cpp  MasterCameraManipulator.h  MasterView.cpp  MasterView.h  Planet.cpp  Planet.h  SecondCameraManipulator.cpp  SecondCameraManipulator.h  SensorCameraManipulator.cpp  SensorCameraManipulator.h  SensorView.cpp  SensorView.h  Shape.h  StarGraph.cpp  StarGraph.h  StarGroup.cpp  StarTable.cpp  StarTable.h  log.cpp  log.h  main.cpp  test.cpp
src/Core/: CMakeLists.txt  CameraStarFunc.cpp  CameraStarFunc.h  Descriptor.cpp  Descriptor.h  Descriptor2.cpp  Descriptor2.h  Descriptor3.cpp  Descriptor3.h  DescriptorConverter.cpp  DescriptorConverter.h  SpecialCenterStarOnGraphGroup.cpp  SpecialCenterStarOnGraphGroup.h  SpecialCenterStarOnSkySphereGroup.cpp  SpecialCenterStarOnSkySphereGroup.h  Star.cpp  Star.h  StarGraph.cpp  StarGraph.h  StarOnGraph.cpp  StarOnGraph.h  StarOnSkySphere.cpp  StarOnSkySphere.h  StarPos.cpp  StarPos.h  StarTable.cpp  StarTable.h
src/Scene/: CMakeLists.txt  CameraFrameNode.cpp  CameraFrameNode.h  MasterView.cpp  Planet.cpp  Planet.h  SensorView.cpp  Shape.cpp  StarGroup.cpp  StarGroup.h
src/Util/: CMakeLists.txt  CommonFunc.cpp  CommonFunc.h
